Equal space between tds and fixed alignment of the url

--- a/admin/assets/stylesheets/elements/_printing.scss
+++ b/admin/assets/stylesheets/elements/_printing.scss
@@ -27,7 +27,7 @@
     page-break-inside: avoid;
   }
   td {
-    min-width:250px;
+    min-width:309px;
     padding: 1em;
     strong {
       font-size: medium;
@@ -80,7 +80,7 @@
   .url {
     font-size: 16px;
     float: right;
-    margin-left: 96px;
+    margin-left: 151px;
     position: static;
     margin-top: -38px;
   }
